// @generated SignedSource<<92a7481d34a56396e0c1187b42565c21>>
// DO NOT EDIT THIS FILE MANUALLY!
// This file is a mechanical copy of the version in the configerator repo. To
// modify it, edit the copy in the configerator repo instead and copy it over by
// running the following in your fbcode directory:
//
// configerator-thrift-updater scm/mononoke/sharding/processname.thrift
/*
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This software may be used and distributed according to the terms of the
 * GNU General Public License version 2.
 */

namespace py configerator.mononoke.sharding.processname
namespace py3 mononoke.sharding.processname
namespace cpp2 mononoke.sharding.processname

/// The names of the processes for which a repo can be executed in a sharded setting.
enum RawProcessName {
  UNKNOWN = 0,
  WALKER_SCRUB_ALL = 1,
  WALKER_SCRUB_DERIVED = 2,
  WALKER_SCRUB_HG_ALL = 3,
  WALKER_SCRUB_UNODE_ALL = 4,
  WALKER_SHALLOW_HG_SCRUB = 5, // deprecated
  WALKER_VALIDATE_ALL = 6,
  HG_SYNC_BACKUP = 7, //deprecated
  HG_SYNC = 8, //deprecated
  DERIVED_DATA_TAILER = 9,
  DERIVED_DATA_TAILER_BACKUP = 10, //deprecated
  X_REPO_BACKSYNCER = 11, // deprecated in favour of X_REPO_BACKSYNC
  X_REPO_BOOKMARKS_VALIDATOR = 12,
  EDEN_API = 13,
  SCS = 14,
  LFS = 15,
  SHARDMANAGER_TEST = 16, // deprecated
  DERIVATION_WORKER = 17,
  ALIAS_VERIFY = 18, // deprecated
  ALIAS_VERIFY_BACKUP = 19, // deprecated
  DRAFT_COMMIT_DELETION = 20,
  STATISTICS_COLLECTOR = 21,
  X_REPO_BACKSYNC = 22,
  MONONOKE_GIT_SERVER = 23,
  REPO_METADATA_LOGGER = 24,
  CAS_SYNC = 25,
  X_REPO_SYNC = 26,
  ASYNC_REQUESTS_WORKER = 27,
  DERIVED_DATA_SERVICE = 28,
  MODERN_SYNC = 29,
  GIT_BUNDLE_GENERATOR = 30,
  MONONOKE_GIT_SERVER_T10 = 31,
  DERIVED_DATA_TAILER_REGIONAL = 32,
  DIFF_SERVICE = 33,
  MONONOKE_GIT_SERVER_TEST = 34,
}
